k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: browsers-api
  labels:
    name: browsers-api
    environment: production
